src/Demo.css
@font-face {
    font-family: 'Courier New';
    src:  url('fonts/CourierNew.ttf') format('ttf');
}

body {
    background-color: #FFF;
    color: #000;
    margin: 0;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.nav-link {
    font-size: 85%;
}

.bodycopy {
    color: #333;
    font-size: 77%
}

.copyright {
    color: #333;
    font-size: 50%;
    font-weight: normal;
}

.poster {

}

.video-title {
    color: #666;
    font-family: 'Courier New';
    font-weight: bold;
    margin-bottom: 5rem !important;
}

.custom-toggler .navbar-toggler-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,102,203, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

.navbar-toggler-icon {
    width: 2.0em !important;
    height: 2.0em !important;
}

